    - 1.01 :
    
        - The configuration file now accepts an option   
          to choose the recipient(s) of the email messages :
          
            - DevNull means no one will receive them.
            - User means only the user will receive them.
            - Admin means only the admin will receive them.
            - Both means the User and the Admin will receive them.
            
        - Manual pages are included since 1.00, but I forgot to    
          add this information to this file.
          
    - 1.00 :
    
        - edpykota now accepts a --noquota option. This
          disable quota checking while still doing page
          accounting. This is really useful for people
          who don't want to limit their users but want
          to know how much pages they print.
          
        - Some untested scripts were added to retrieve
          the life time page counter of non-SNMP printers.
          
        - Every directory now has a specific README file.  
        
    - 0.99 :
    
        - Under some circumstances while the user wasn't allowed
          to print, he didn't receive any email message. It is
          now fixed.
          
        - When an user wasn't allowed to print, the quota for
          the previous user wasn't updated. This is now fixed.
          
    - 0.98 :
    
        - Correctly handle the case where the printer is switched off.
        
        - Small bug wrt syslog fixed.
        
    - 0.97 :
    
        - edpykota accepts wildcards on its command line for users/groups too
          if the --add option is not set, e.g. :
          
              $ edpykota --printer lp --softlimit 50 --hardlimit 100 "jer*"
              
        - If no user name is passed at all, then a default wildcard of "*"
          which means apply the command on ALL users for this printer is used.
          
        - Small bug fixes.
        
    - 0.96 :
